[package]
name = "grpr"
version = "1.0.0"
edition = "2021"
description = "A CLI tool to recursively execute Git commands in subdirectories that are Git repositories."
license = "MIT"
repository = "https://github.com/evolve75/grpr"
authors = ["Anupam Sengupta <your-email@example.com>"]
rust-version = "1.56"
readme = "README.md"
homepage = "https://github.com/evolve75/grpr"
documentation = "https://docs.rs/grpr"
keywords = ["git", "cli", "automation", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
walkdir = "2.4.3"

[dev-dependencies]
tempfile = "3.6.0"
