[package]
name = "grpr"
version = "2.0.1"
edition = "2024"
description = "A CLI tool to recursively execute Git commands in subdirectories that are Git repositories."
license = "MIT"
repository = "https://github.com/evolve75/grpr"
authors = ["Anupam Sengupta <your-email@example.com>"]
rust-version = "1.85"
readme = "README.md"
homepage = "https://github.com/evolve75/grpr"
documentation = "https://docs.rs/grpr"
keywords = ["git", "cli", "automation", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
walkdir = "2.5.0"
rayon = "1.11"
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
